Added a navbar in header section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <!-- Font Awesome Library -->
     <link rel="stylesheet" href="css/all.min.css" />
-    <!-- Gooogle Fonts -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,7 +23,21 @@
   <body>
     <!-- Start Header  -->
     <header>
-      <div class="container"></div>
+      <div class="container">
+        <nav>
+          <img src="/images/logo.png" alt="Logo" />
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+          <div class="icon">
+            <div class="draw-icon"></div>
+          </div>
+        </nav>
+      </div>
     </header>
     <!-- End Header  -->
   </body>
